# anisquiz

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml
backend/: .env.example  Cargo.toml  anisquiz.db  anisquiz.db.example
backend/migrations/: 01_create_games_table.sql  02_create_teams_table.sql  03_create_quests_table.sql  04_create_logs_table.sql  05_create_users_table.sql  06_create_passwords_table.sql
backend/src/: api.rs  errors.rs  handlers.rs  main.rs  model.rs
backend/src/api/: auth.rs  types.rs
backend/src/model/: game.rs  log.rs  quest.rs  team.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: api.rs  components.rs  errors.rs  game.rs  main.rs  model.rs
frontend/src/api/: payloads.rs
frontend/src/components/: game.rs  log.rs  picker.rs  scoreboard.rs
frontend/src/game/: nav.rs  scoreboard.rs
frontend/src/model/: game.rs  log.rs  quest.rs  team.rs
src/: app copy.rs  app.rs  main.rs
src/app/game/: picker.rs
