[package]
name = "anisquiz"
version = "0.1.0"
edition = "2024"
description = "Anime screenshot guessing game"
readme = "README.md"
#repository = "https://github.com/yewstack/yew-trunk-minimal-template"
#license = "MIT OR Apache-2.0"
#keywords = ["yew", "trunk"]
#categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
gloo = "0.12"
nanoid = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["sqlite"] }
web-sys = "0.3"
yew = { version = "0.23", features = ["csr"] }
