[package]
name = "anisquiz-frontend"
version = "0.1.0"
edition = "2024"
description = "Anime screenshot guessing game"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
gloo = "0.12"
nanoid = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
yew = { version = "0.23", features = ["csr"] }
